--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,7 +50,6 @@ export(css)
 export(currency)
 export(data_color)
 export(default_fonts)
-export(define_units)
 export(ends_with)
 export(escape_latex)
 export(everything)
@@ -61,6 +60,7 @@ export(fmt)
 export(fmt_auto)
 export(fmt_bins)
 export(fmt_bytes)
+export(fmt_chem)
 export(fmt_currency)
 export(fmt_date)
 export(fmt_datetime)
