--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -100,6 +100,7 @@ reference:
     - fmt_url
     - fmt_image
     - fmt_flag
+    - fmt_country
     - fmt_icon
     - fmt_passthrough
     - fmt_auto
