--- a/NAMESPACE
+++ b/NAMESPACE
@@ -107,6 +107,7 @@ export(fmt_auto)
 export(fmt_bins)
 export(fmt_bytes)
 export(fmt_chem)
+export(fmt_country)
 export(fmt_currency)
 export(fmt_date)
 export(fmt_datetime)
