--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,6 +53,7 @@ S3method(to_output_location,default)
 S3method(to_output_location,output_relative)
 export("%>%")
 export(adjust_luminance)
+export(as_gtable)
 export(as_latex)
 export(as_raw_html)
 export(as_rtf)
