--- a/NAMESPACE
+++ b/NAMESPACE
@@ -113,6 +113,7 @@ export(fmt_currency)
 export(fmt_date)
 export(fmt_datetime)
 export(fmt_duration)
+export(fmt_email)
 export(fmt_engineering)
 export(fmt_flag)
 export(fmt_fraction)
