--- a/NAMESPACE
+++ b/NAMESPACE
@@ -130,6 +130,7 @@ export(fmt_percent)
 export(fmt_roman)
 export(fmt_scientific)
 export(fmt_spelled_num)
+export(fmt_tf)
 export(fmt_time)
 export(fmt_units)
 export(fmt_url)
