--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -94,6 +94,7 @@ reference:
     - fmt_datetime
     - fmt_duration
     - fmt_bins
+    - fmt_tf
     - fmt_markdown
     - fmt_units
     - fmt_chem
