--- a/NAMESPACE
+++ b/NAMESPACE
@@ -218,6 +218,7 @@ export(text_case_match)
 export(text_case_when)
 export(text_replace)
 export(text_transform)
+export(unit_conversion)
 export(vars)
 export(vec_fmt_bytes)
 export(vec_fmt_currency)
