--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -199,6 +199,7 @@ reference:
     - pct
     - from_column
     - currency
+    - unit_conversion
     - nanoplot_options
     - adjust_luminance
     - stub
