--- a/NAMESPACE
+++ b/NAMESPACE
@@ -160,6 +160,7 @@ export(info_icons)
 export(info_locales)
 export(info_paletteer)
 export(info_time_style)
+export(info_unit_conversions)
 export(local_image)
 export(matches)
 export(md)
