R 3.6 + roxygen2 7.3.0 use `@exportS3Method` instead of `register_s3_method()` https://www.tidyverse.org/blog/2024/01/roxygen2-7-3-0/

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,9 @@ S3method(cell_style_to_html,cell_border)
 S3method(cell_style_to_html,cell_fill)
 S3method(cell_style_to_html,cell_text)
 S3method(cell_style_to_html,default)
+S3method(htmltools::as.tags,gt_tbl)
+S3method(knitr::knit_print,gt_group)
+S3method(knitr::knit_print,gt_tbl)
 S3method(plot,gt_gtable)
 S3method(print,gt_group)
 S3method(print,gt_tbl)
