Review methods Since htmltools is in Imports, can use as.tags + rm ws in .Rbuildignore. Follow advice in https://roxygen2.r-lib.org/articles/namespace.html#s3

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,11 +3,11 @@
 S3method(add_text_style,character)
 S3method(add_text_style,shiny.tag)
 S3method(as.data.frame,gt_tbl)
+S3method(as.tags,gt_tbl)
 S3method(cell_style_to_html,cell_border)
 S3method(cell_style_to_html,cell_fill)
 S3method(cell_style_to_html,cell_text)
 S3method(cell_style_to_html,default)
-S3method(htmltools::as.tags,gt_tbl)
 S3method(knitr::knit_print,gt_group)
 S3method(knitr::knit_print,gt_tbl)
 S3method(plot,gt_gtable)
@@ -244,6 +244,7 @@ export(vec_fmt_time)
 export(web_image)
 import(rlang)
 importFrom(dplyr,vars)
+importFrom(htmltools,as.tags)
 importFrom(htmltools,css)
 importFrom(magrittr,"%>%")
 importFrom(rlang,`%||%`)
