--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ S3method(cell_style_to_html,default)
 S3method(knitr::knit_print,gt_group)
 S3method(knitr::knit_print,gt_tbl)
 S3method(plot,gt_gtable)
+S3method(plot,gt_tbl)
 S3method(print,gt_group)
 S3method(print,gt_tbl)
 S3method(print,rtf_text)
