--- a/.github/workflows/build-site.yaml
+++ b/.github/workflows/build-site.yaml
@@ -1,6 +1,9 @@
 on:
   schedule:
     - cron: '0 23 * * *'
+  pull_request:
+    branches:
+      - master
 
 name: netlify-quarto-gt-examples-site
 
@@ -50,18 +53,3 @@ jobs:
       - name: Build Quarto site
         run: |
           quarto render gt_qmd_examples
-
-      - name: Deploy to Netlify
-        uses: nwtgck/actions-netlify@v2.0
-        with:
-          publish-dir: 'gt_qmd_examples/_site'
-          production-branch: master
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          deploy-message: "Deploy from GitHub Actions"
-          enable-pull-request-comment: false
-          enable-commit-comment: true
-          enable-commit-status: true
-        env:
-          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
-          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
-        timeout-minutes: 1
