--- a/NAMESPACE
+++ b/NAMESPACE
@@ -194,6 +194,7 @@ export(rm_header)
 export(rm_source_notes)
 export(rm_spanners)
 export(rm_stubhead)
+export(row_group)
 export(row_group_order)
 export(rows_add)
 export(starts_with)
