--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -171,6 +171,8 @@ tests/testthat/test-table_parts.R
 tests/testthat/_snaps/table_parts.md
 
 tests/testthat/test-text_transform.R
+tests/testthat/_snaps/text_transform.md
+
 tests/testthat/test-util_functions.R
 tests/testthat/test-utils_formatters.R
 tests/testthat/test-utils_plots.R
