Add S3 method for casting to rtf.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,6 +55,10 @@ S3method(to_output_location,cells_body)
 S3method(to_output_location,cells_stub)
 S3method(to_output_location,default)
 S3method(to_output_location,output_relative)
+S3method(vctrs::vec_cast,character.rtf_text)
+S3method(vctrs::vec_cast,rtf_text.character)
+S3method(vctrs::vec_ptype2,character.rtf_text)
+S3method(vctrs::vec_ptype2,rtf_text.character)
 export("%>%")
 export(adjust_luminance)
 export(as_gtable)
