--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -385,5 +385,25 @@ reference:
     - rx_adsl
     - rx_addv
 
+
+articles:
+- title: Get started
+  navbar: ~
+  contents:
+  - creating-summary-lines
+- title: Case studies
+  navbar: Case studies
+  contents:
+  - case-study-gtcars
+  - case-study-clinical-tables
+
+- title: Datasets
+  contents:
+  - gt-datasets
+- title: Visual tests
+  contents:
+  - gt-interactive
+  - gt-visual
+
 redirects:
   - ["articles/intro-creating-gt-tables.html", "articles/gt.html"]
