--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -391,6 +391,7 @@ articles:
 - title: Get started
   navbar: ~
   contents:
+  - gt
   - creating-summary-lines
 - title: Case studies
   navbar: Case studies
@@ -399,6 +400,7 @@ articles:
   - case-study-clinical-tables
 
 - title: Datasets
+  navbar: Datasets
   contents:
   - gt-datasets
 - title: Visual tests
