Re-export where all_of, any_of from tidyselect.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,6 +57,8 @@ S3method(to_output_location,default)
 S3method(to_output_location,output_relative)
 export("%>%")
 export(adjust_luminance)
+export(all_of)
+export(any_of)
 export(as_gtable)
 export(as_latex)
 export(as_raw_html)
@@ -244,11 +246,14 @@ export(vec_fmt_scientific)
 export(vec_fmt_spelled_num)
 export(vec_fmt_time)
 export(web_image)
+export(where)
 import(rlang)
 importFrom(dplyr,vars)
 importFrom(htmltools,as.tags)
 importFrom(htmltools,css)
 importFrom(magrittr,"%>%")
+importFrom(tidyselect,all_of)
+importFrom(tidyselect,any_of)
 importFrom(tidyselect,contains)
 importFrom(tidyselect,ends_with)
 importFrom(tidyselect,everything)
@@ -256,6 +261,7 @@ importFrom(tidyselect,matches)
 importFrom(tidyselect,num_range)
 importFrom(tidyselect,one_of)
 importFrom(tidyselect,starts_with)
+importFrom(tidyselect,where)
 importFrom(xml2,`xml_attr<-`)
 importFrom(xml2,`xml_text<-`)
 importFrom(xml2,as_xml_document)
