Improved 2-way communication. New function `gt_update_select()` can be used to update the selection in a gt table in Shiny. The gt input also now differentiates between "nothing is selected because this table has just initialized" and "nothing is selected because the user deselected everything," which is very useful for updating related inputs and avoiding loops.
I think this is done. Let me know if you'd like more tests or examples (or anything else)! I'd love to use this, so let me know what I need to do to help push it over the goal line!

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -157,6 +157,7 @@ export(gt_latex_dependencies)
 export(gt_output)
 export(gt_preview)
 export(gt_split)
+export(gt_update_select)
 export(gtsave)
 export(html)
 export(info_currencies)
