Add gt_update_select to _pkgdown.yml.

--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -295,6 +295,7 @@ reference:
     contents:
     - render_gt
     - gt_output
+    - gt_update_select
 
   - title: Export and extraction functions
     desc: >
