--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -51,6 +51,7 @@ Imports:
     scales (>= 1.3.0),
     tidyselect (>= 1.2.1),
     vctrs,
+    withr,
     xml2 (>= 1.3.6)
 Suggests:
     digest (>= 0.6.31),
@@ -70,8 +71,7 @@ Suggests:
     shiny (>= 1.9.1),
     testthat (>= 3.1.9),
     tidyr,
-    webshot2 (>= 0.1.0),
-    withr
+    webshot2 (>= 0.1.0)
 Config/Needs/coverage: officer
 Config/Needs/website: quarto
 ByteCompile: true
