Use tidyr new functions (`tidyr::gather()` -> `tidyr::pivot_longer()` and `tidyr::spread()` -> `tidyr::pivot_wider()` )

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -68,7 +68,7 @@ Suggests:
     rvest,
     shiny (>= 1.9.1),
     testthat (>= 3.1.9),
-    tidyr,
+    tidyr (>= 1.0.0),
     webshot2 (>= 0.1.0),
     withr
 Config/Needs/coverage: officer
