--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -112,6 +112,8 @@ tests/testthat/_snaps/image.md
 tests/testthat/test-info_tables.R
 tests/testthat/test-input_data_validation.R
 
+tests/testthat/test-l_fmt_date_time.R
+
 tests/testthat/test-l_summary_rows.R
 tests/testthat/_snaps/l_summary_rows.md
 
