--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -18,6 +18,13 @@ pkgdown/assets/gt-latex.qmd
 man/figures/
 tests/gt-examples
 tests/performance-monitoring
+
+tests/testthat/test-as_gtable.R
+tests/testthat/_snaps/as_gtable.md
+
+tests/testthat/test-as_latex.R
+tests/testthat/_snaps/as_latex.md
+
 tests/testthat/test-as_raw_html.R
 
 tests/testthat/test-as_word.R
@@ -183,6 +190,10 @@ tests/testthat/_snaps/text_transform.md
 
 tests/testthat/test-util_functions.R
 tests/testthat/test-utils_plots.R
+
+tests/testthat/test-utils_render_grid.R
+tests/testthat/_snaps/utils_render_grid.md
+
 tests/testthat/test-utils_render_html.R
 tests/testthat/test-utils_units.R
 
