move inherit param to cols_hide

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -255,6 +255,7 @@ importFrom(dplyr,vars)
 importFrom(htmltools,as.tags)
 importFrom(htmltools,css)
 importFrom(magrittr,"%>%")
+importFrom(rlang,caller_env)
 importFrom(tidyselect,all_of)
 importFrom(tidyselect,any_of)
 importFrom(tidyselect,contains)
