--- a/NAMESPACE
+++ b/NAMESPACE
@@ -252,6 +252,7 @@ export(web_image)
 export(where)
 import(rlang)
 importFrom(dplyr,vars)
+importFrom(fs,path_expand)
 importFrom(htmltools,as.tags)
 importFrom(htmltools,css)
 importFrom(magrittr,"%>%")
