add option for marks_first

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -180,6 +180,7 @@ export(opt_align_table_header)
 export(opt_all_caps)
 export(opt_css)
 export(opt_footnote_marks)
+export(opt_footnote_order)
 export(opt_footnote_spec)
 export(opt_horizontal_padding)
 export(opt_interactive)
